[package]
name = "splendor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "splendor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.0", features = ["init-if-needed"] } 
anchor-spl = "0.22.0"
spl-token-lending = { git = "https://github.com/solana-labs/solana-program-library", version = "0.1.0", features = ["no-entrypoint"] }
uint = "=0.9.1"
solana-program = "1.9.9"
bytemuck = "1.7.2"
spl-token = "3.3.0"